# firmware-setup

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deps.sh  firmware-setup.inf  rust-toolchain  rust-toolchain.toml  startup.nsh
.cargo/: config.toml
.github/workflows/: ci.yml
res/: startup.nsh
src/: coreboot.rs  debug.rs  display.rs  dump_hii.rs  exec.rs  fde.rs  fs.rs  hii.rs  io.rs  key.rs  lib.rs  loaded_image.rs  main.rs  math.rs  null.rs  panic.rs  pointer.rs  proto.rs  rng.rs  rt.rs  security.rs  serial.rs  shell.rs  string.rs  text.rs  ui.rs  vars.rs
src/app/: coreboot.rs  mod.rs
src/app/screen/: boot.rs  main.rs  mod.rs  setting.rs
src/flash/: mod.rs
src/hw/: dmi.rs
src/image/: bmp.rs  mod.rs
targets/: x86_64-uefi-pe.json  x86_64-unknown-uefi-drv.json
