[package]
name = "system76_firmware_setup"
version = "1.0.0"
edition = "2018"
license = "GPL-3.0-only"

[profile.release]
lto = true

[dependencies]
bitflags = "1.3.2"
coreboot-table = { git = "https://gitlab.redox-os.org/redox-os/coreboot-table.git" }
memoffset = "0.7.1"
orbclient = { version = "0.3.39", default-features = false }
orbfont = { version = "0.1.11", default-features = false, features = ["no-std"] }
plain = "0.2.3"
redox_dmi = "0.1.5"
redox_hwio = { version = "0.1.6", default-features = false }
redox_uefi = "0.1.8"
redox_uefi_std = "0.1.8"
spin = "0.9.4"

[features]
default = []
debug = []
